Refactoring: MonitoringGraphService refactored + Logs für alle Clients und resources + clientLogger und TestLogResource deleted